--- a/chrome/_locales/fr/messages.json
+++ b/chrome/_locales/fr/messages.json
@@ -31,5 +31,8 @@
   },
   "Continue": {
       "message": "Continuer"
+  },
+  "autoSaveMsg": {
+      "message": "Les fichiers seront sauvegardés automatiquement chaque 5 minutes."
   }
 }
