recording version beta1.00001

--- a/chrome/_locales/en/messages.json
+++ b/chrome/_locales/en/messages.json
@@ -34,5 +34,8 @@
   },
   "autoSaveMsg": {
       "message": "Recording files will be saved automatically every 5 minutes."
+  },
+  "nowRecording": {
+      "message": "Now recording..."
   }
 }
