--- a/chrome/_locales/fr/messages.json
+++ b/chrome/_locales/fr/messages.json
@@ -34,5 +34,8 @@
   },
   "autoSaveMsg": {
       "message": "Les fichiers seront sauvegardés automatiquement chaque 5 minutes."
+  },
+  "nowRecording": {
+      "message": "Enregistrement en cours..."
   }
 }
